feat: 对齐 1.21 内容与运行时行为
- 补全实体、Boss、召唤物与弹幕行为
- 对齐持久化、数据组件及网络运行时语义
- 迁移并整理配方、战利品表、结构与资源命名空间
- 修复跨维度生命周期、目标缓存和友军伤害逻辑